feat: 채팅에 mybatis로 member데이터 가져오게 설정
DTO 수정 필요, mongoDB연동 필요, 채팅방 다중 생성 필요

--- a/module-chat/src/main/resources/static/css/style.css
+++ b/module-chat/src/main/resources/static/css/style.css
@@ -333,5 +333,5 @@ body {
 }
 
 .photo.you {
-  background-image: url("https://github.com/zorojuno.png");
+  background-image: url("image/profile.png");
 }
