ongoing: 채팅 개발중
현재 로그인이 구현되어있지않아 우선적으로 자신을 특정할 수 있는 임시 페이지를 제작함. 다음 제작 포인트 : session이 numSet이라는 LinkedHashSet에 저장되고 이를 통해 메시지를 발송해주는 방식이므로, 현재, session_id와 member_id를 key-value로 갖는 obj를 생성해야함.

--- a/module-chat/src/main/resources/templates/chattingRoom.html
+++ b/module-chat/src/main/resources/templates/chattingRoom.html
@@ -109,6 +109,7 @@
   let cachedSessionId;
   let isLastChatFromMe;
   function onMessage(msg) {
+    console.log(msg)
     var data = msg.data;
     var sessionId = null;
     var message = null;
