--- a/module-chat/src/main/resources/templates/login.html
+++ b/module-chat/src/main/resources/templates/login.html
@@ -24,9 +24,8 @@
 </div>
 </body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-<script type="text/javascript" src='/js/chattingList.js'></script>
+<script type="text/javascript" src='/js/login.js'></script>
 <script th:inline="javascript">
   const memberList = [[${memberList}]];
-  const meId = [[${meId}]];
 </script>
 </html>
