ongoing: 채팅 개발중, 채팅방 분리 개발
전반적인 채팅 변수 구조 재설정 필요,
mongoDB로 채팅방 내역 저장 필요

--- a/module-chat/src/main/resources/templates/login.html
+++ b/module-chat/src/main/resources/templates/login.html
@@ -14,6 +14,7 @@
   <section class="chat">
 
     <div id="chat" class="messages-chat" style="height: 620px;">
+      <div class="message" mekc-member-id="1"><div class="photo you"></div><p class="text me" style="width:100%">채팅 시작자 특정</p><p></p></div>
     </div>
     <div class="footer-chat">
 
