--- a/module-chat/src/main/resources/templates/chattingList.html
+++ b/module-chat/src/main/resources/templates/chattingList.html
@@ -14,6 +14,7 @@
   <section class="chat">
 
     <div id="chat" class="messages-chat" style="height: 620px;">
+      <div class="message" ><div class="photo you"></div><p class="text me" style="width:100%">채팅 타겟 인원 선택</p><p></p></div>
     </div>
     <div class="footer-chat">
 
