--- a/module-chat/src/main/resources/templates/chattingList.html
+++ b/module-chat/src/main/resources/templates/chattingList.html
@@ -12,14 +12,12 @@
 <body>
 <div class="container" style="width: 540px;">
   <section class="chat">
+    <div class="footer-chat">
+      <i class="icon send fa fa-wechat clickable" onclick="chattingList.makeTargetSelect()" aria-hidden="true"></i>
 
+    </div>
     <div id="chat" class="messages-chat" style="height: 620px;">
       <div class="message" ><div class="photo you"></div><p class="text me" style="width:100%">채팅 타겟 인원 선택</p><p></p></div>
-    </div>
-    <div class="footer-chat">
-
-      <input id="opinion" type="text" class="write-message" onkeyup="enterkey()" placeholder="Type your message here">
-      <i class="icon send fa fa-paper-plane-o clickable" onclick="sendMessage()" aria-hidden="true"></i>
     </div>
   </section>
 </div>
@@ -27,7 +25,10 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 <script type="text/javascript" src='/js/chattingList.js'></script>
 <script th:inline="javascript">
-  const memberList = [[${memberList}]];
+  const chatList = [[${chatList}]];
   const meId = [[${meId}]];
 </script>
+<div id="resultDiv" style="display: none">
+  <p th:if="${msg}!=null" th:text="${msg}"></p>
+</div>
 </html>
