--- a/module-chat/src/main/resources/templates/login.html
+++ b/module-chat/src/main/resources/templates/login.html
@@ -12,14 +12,10 @@
 <body>
 <div class="container" style="width: 540px;">
   <section class="chat">
-
-    <div id="chat" class="messages-chat" style="height: 620px;">
-      <div class="message" mekc-member-id="1"><div class="photo you"></div><p class="text me" style="width:100%">채팅 시작자 특정</p><p></p></div>
-    </div>
     <div class="footer-chat">
-
-      <input id="opinion" type="text" class="write-message" onkeyup="enterkey()" placeholder="Type your message here">
-      <i class="icon send fa fa-paper-plane-o clickable" onclick="sendMessage()" aria-hidden="true"></i>
+      <input id="opinion" type="text" class="write-message" style="width: 100%" placeholder="Type your message here" value="계정을 선택해주세요" readonly>
+    </div>
+    <div id="chat" class="messages-chat" style="height: 620px;">
     </div>
   </section>
 </div>
