design: 관리자페이지 디자인 수정 진행중

--- a/module-admin/src/main/resources/templates/layout/header.html
+++ b/module-admin/src/main/resources/templates/layout/header.html
@@ -4,7 +4,7 @@
         <div class="navbar-wrapper">
             <div class="navbar-logo">
                 <a class="mobile-menu" href="#!">
-                    <i class="fa fa-bars"></i>
+                    <img class="img-fluid" th:src="@{/files/assets/images/menu_open.png}" alt="Theme-Logo"/>
                 </a>
                 <a href="index.html">
                     <img class="img-fluid" th:src="@{/files/assets/images/logo.png}" alt="Theme-Logo"/>
