--- a/module-admin/src/main/resources/templates/layout/main.html
+++ b/module-admin/src/main/resources/templates/layout/main.html
@@ -94,7 +94,6 @@
 </body>
 
 <!-- Required Jquery -->
-<script type="text/javascript" th:src="@{/files/bower_components/jquery/dist/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/files/bower_components/jquery-ui/jquery-ui.min.js}"></script>
 <script type="text/javascript" th:src="@{/files/bower_components/popper.js/dist/umd/popper.min.js}"></script>
 <script type="text/javascript" th:src="@{/files/bower_components/bootstrap/dist/js/bootstrap.min.js}"></script>
@@ -117,9 +116,15 @@
 <script type="text/javascript" th:src="@{/files/bower_components/select2/dist/js/select2.full.min.js}"></script>
 <!-- Multiselect js -->
 <script type="text/javascript" th:src="@{/files/bower_components/bootstrap-multiselect/dist/js/bootstrap-multiselect.js}"></script>
+<script type="text/javascript" src="/files/bower_components/multiselect/js/jquery.multi-select.js"></script>
+<script type="text/javascript" src="/files/assets/js/jquery.quicksearch.js"></script>
+
 <!-- Custom js -->
 <script type="text/javascript" th:src="@{/files/assets/pages/advance-elements/swithces.js}"></script>
 <script type="text/javascript" th:src="@{/files/assets/pages/advance-elements/select2-custom.js}"></script>
+
+<script type="text/javascript" src="/swithces.js"></script>
+
 <script th:src="@{/files/assets/js/pcoded.min.js}"></script>
 <script th:src="@{/files/assets/js/vartical-layout.min.js}"></script>
 <script th:src="@{/files/assets/js/jquery.mCustomScrollbar.concat.min.js}"></script>
