--- a/module-admin/src/main/resources/templates/layout/header.html
+++ b/module-admin/src/main/resources/templates/layout/header.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="header">
-    <nav class="navbar header-navbar pcoded-header" header-theme="theme6">
+    <nav class="navbar header-navbar pcoded-header">
         <div class="navbar-wrapper">
             <div class="navbar-logo">
                 <a class="mobile-menu" href="#!">
@@ -41,7 +41,6 @@
                     <li class="user-profile header-notification">
                         <div class="dropdown-primary dropdown">
                             <div class="dropdown-toggle" data-bs-toggle="dropdown">
-                                <img src="../files/assets/images/avatar-4.jpg" class="img-radius" alt="User-Profile-Image">
                                 <span>John Doe</span>
                                 <i class="feather icon-chevron-down"></i>
                             </div>
