--- a/module-admin/src/main/resources/templates/layout/main.html
+++ b/module-admin/src/main/resources/templates/layout/main.html
@@ -123,7 +123,7 @@
 <script type="text/javascript" th:src="@{/files/assets/pages/advance-elements/swithces.js}"></script>
 <script type="text/javascript" th:src="@{/files/assets/pages/advance-elements/select2-custom.js}"></script>
 
-<script type="text/javascript" src="/swithces.js"></script>
+<script type="text/javascript" th:src="@{/js/switches.js}"></script>
 
 <script th:src="@{/files/assets/js/pcoded.min.js}"></script>
 <script th:src="@{/files/assets/js/vartical-layout.min.js}"></script>
