--- a/module-admin/src/main/resources/templates/layout/head.html
+++ b/module-admin/src/main/resources/templates/layout/head.html
@@ -50,6 +50,7 @@
         <link rel="stylesheet" type="text/css" th:href="@{/files/assets/css/jquery.mCustomScrollbar.css}">
 
         <!-- 관리자 임의 추가 css -->
+        <link rel="stylesheet" type="text/css" th:href="@{/css/admin.common.css}">
         <script type="text/javascript" src="/files/bower_components/jquery/dist/jquery.min.js"></script>
 
     </head>
