design: main-container background 수정

--- a/module-admin/src/main/resources/static/files/assets/css/style.css
+++ b/module-admin/src/main/resources/static/files/assets/css/style.css
@@ -6094,7 +6094,7 @@ table tbody .border-bottom-info td {
 .pcoded-main-container {
   display: block;
   position: relative;
-  background: #F6F7FB;
+  background: #F9F7F2;
   min-height: calc(100vh - 56px); }
 
 .pcoded .pcoded-content {
