--- a/module-admin/src/main/resources/static/files/assets/scss/partials/menu/_pcmenu.scss
+++ b/module-admin/src/main/resources/static/files/assets/scss/partials/menu/_pcmenu.scss
@@ -578,7 +578,7 @@ $dark-layout-color: #171a19;
 .pcoded-main-container {
     display: block;
     position: relative;
-    background: #F6F7FB;
+    background: #F9F7F2;
     min-height: calc(100vh - 56px);
 }
 
