--- a/module-admin/src/main/resources/static/files/assets/scss/partials/menu/_pcmenu.scss
+++ b/module-admin/src/main/resources/static/files/assets/scss/partials/menu/_pcmenu.scss
@@ -243,6 +243,8 @@ $dark-layout-color: #171a19;
     padding: 0;
 
     .navbar-wrapper {
+        display:flex;
+
         .navbar-logo {
             position: relative;
             align-items: center;
@@ -282,6 +284,15 @@ $dark-layout-color: #171a19;
         }
 
         .navbar-container {
+            width: calc(100% - 240px) !important;
+            height:68px !important;
+            background: #F9F7F2 !important;
+            border-radius: 20px 0px 0px 0px;
+
+            @media only screen and (max-width: 992px) {
+                display:none;
+            }
+
             .nav-left {
                 float: left;
                 margin-bottom: 0;
@@ -583,6 +594,7 @@ $dark-layout-color: #171a19;
 }
 
 .pcoded .pcoded-content {
+    background: #171a19;
     position: relative;
     display: block;
 }
@@ -594,6 +606,8 @@ $dark-layout-color: #171a19;
 
 .pcoded-inner-content {
     background-color: #F9F7F2;
+    border-radius: 0px 0px 0px 20px !important;
+    min-height: calc(100vh - 56px);
     padding: 10px;
 }
 
@@ -1133,12 +1147,12 @@ $dark-layout-color: #171a19;
         &[vertical-nav-type="expanded"] .pcoded-navbar .pcoded-item .pcoded-hasmenu {
             .pcoded-submenu li {
                 > a {
-                    padding-left: 30px;
+                    padding-left: 18px;
                 }
 
                 .pcoded-submenu li {
                     > a {
-                        padding-left: 50px;
+                        padding-left: 40px;
                     }
                 }
             }
@@ -1239,7 +1253,7 @@ $dark-layout-color: #171a19;
                 }
 
                 .pcoded-submenu li.pcoded-hasmenu > a:after {
-                    top: 0;
+                    top: 9px;
                 }
             }
 
@@ -1445,7 +1459,7 @@ $dark-layout-color: #171a19;
             }
         }
 
-        &[subitem-icon="style1"] .pcoded-submenu li > a .pcoded-mtext:before {
+      /*  &[subitem-icon="style1"] .pcoded-submenu li > a .pcoded-mtext:before {
             content: "\e844";
         }
 
@@ -1467,7 +1481,7 @@ $dark-layout-color: #171a19;
 
         &[subitem-icon="style6"] .pcoded-submenu li > a .pcoded-mtext:before {
             content: '\e89b';
-        }
+        }*/
     }
 
     &[theme-layout="vertical"] .pcoded-navbar .pcoded-item > li {
@@ -1498,14 +1512,14 @@ $dark-layout-color: #171a19;
     }
 
     .pcoded-navbar .pcoded-item .pcoded-hasmenu .pcoded-submenu li > a:before {
-        border-left-style: solid;
+/*        border-left-style: solid;
         border-left-width: 3px;
         border-left-color: transparent;
         content: " ";
         height: 100%;
         left: 0;
         position: absolute;
-        top: 0;
+        top: 0;*/
     }
 
     &[theme-layout="vertical"] {
@@ -3361,7 +3375,7 @@ $dark-layout-color: #171a19;
                     .pcoded-hasmenu .pcoded-submenu li {
                         &:hover {
                             > a {
-                                background-color: $value;
+                                background-color: #000;
                                 color: #dcdcdc;
                             }
 
@@ -3373,7 +3387,7 @@ $dark-layout-color: #171a19;
                         &.active {
                             > a {
                                 color: #dcdcdc;
-                                background-color: $value;
+                                background-color: #000;
                             }
 
                             > a .pcoded-mtext:before {
@@ -4546,7 +4560,7 @@ $dark-layout-color: #171a19;
                 } @else {
                     color: #fff;
                     a {
-                        color: #fff;
+                        color: #1C1B1F;
                     }
                     .navbar-wrapper .header-search .main-search .input-group .input-group-addon{
                         color: #fff;
