--- a/module-admin/src/main/resources/templates/layout/header.html
+++ b/module-admin/src/main/resources/templates/layout/header.html
@@ -21,23 +21,15 @@
                             <i class="full-screen feather icon-maximize"></i>
                         </a>
                     </li>
+
+                    <li>
+                        <a href="javascript:void(0)" onclick="javascript:toggleFullScreen()" class="waves-effect waves-light"
+                            style="font-size:14px; line-height:20px; color:#000">
+                            전체화면 보기
+                        </a>
+                    </li>
                 </ul>
                 <ul class="nav-right">
-                    <!--<li>
-                        <div class="col-12 mt-2">
-                            <select name="select" class="form-select form-control">
-                                <option value="opt1">primary
-                                </option>
-                                <option value="opt2">Type 2</option>
-                                <option value="opt3">Type 3</option>
-                                <option value="opt4">Type 4</option>
-                                <option value="opt5">Type 5</option>
-                                <option value="opt6">Type 6</option>
-                                <option value="opt7">Type 7</option>
-                                <option value="opt8">Type 8</option>
-                            </select>
-                        </div>
-                    </li>-->
                     <li class="user-profile header-notification">
                         <div class="dropdown-primary dropdown">
                             <div class="dropdown-toggle" data-bs-toggle="dropdown">
