--- a/module-admin/src/main/resources/static/files/assets/scss/partials/menu/_pcmenu.scss
+++ b/module-admin/src/main/resources/static/files/assets/scss/partials/menu/_pcmenu.scss
@@ -284,10 +284,12 @@ $dark-layout-color: #171a19;
         }
 
         .navbar-container {
-            width: calc(100% - 240px) !important;
-            height:68px !important;
-            background: #F9F7F2 !important;
+            width: calc(100% - 240px);
+            height:68px;
+            background: #F9F7F2;
             border-radius: 20px 0px 0px 0px;
+            color: black;
+
 
             @media only screen and (max-width: 992px) {
                 display:none;
@@ -322,6 +324,10 @@ $dark-layout-color: #171a19;
                         }
                     }
                 }
+                li:not(:first-child) {
+                    padding-top: 14px;
+                    margin-left: -15px;
+                }
 
                 a {
                     padding: 0 0.6rem;
@@ -340,7 +346,7 @@ $dark-layout-color: #171a19;
                 @extend .nav-left;
 
                 li {
-                    padding: 0 20px;
+                    padding: 10px 20px;
                 }
 
                 .user-profile {
