chore : jquery.serializeObject.js 추가 , swithces.js 제거

--- a/module-admin/src/main/resources/templates/layout/main.html
+++ b/module-admin/src/main/resources/templates/layout/main.html
@@ -120,10 +120,10 @@
 <script type="text/javascript" src="/files/assets/js/jquery.quicksearch.js"></script>
 
 <!-- Custom js -->
-<script type="text/javascript" th:src="@{/files/assets/pages/advance-elements/swithces.js}"></script>
 <script type="text/javascript" th:src="@{/files/assets/pages/advance-elements/select2-custom.js}"></script>
-
 <script type="text/javascript" th:src="@{/js/switches.js}"></script>
+<script type="text/javascript" th:src="@{/js/jquery.serializeObject.js}"></script>
+
 
 <script th:src="@{/files/assets/js/pcoded.min.js}"></script>
 <script th:src="@{/files/assets/js/vartical-layout.min.js}"></script>
